// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Code empty 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-17nixd9=""
  >
    before|
    |after
  </p>
</div>
`;

exports[`Storyshots Code ends single line 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-17nixd9=""
  >
    This is where we see 
    <code
      data-css-hvsxkc=""
    >
      inline code
    </code>
  </p>
</div>
`;

exports[`Storyshots Code lead single line 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-17nixd9=""
  >
    <code
      data-css-hvsxkc=""
    >
      inline code
    </code>
     that is here
  </p>
</div>
`;

exports[`Storyshots Code line wrap 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-17nixd9=""
  >
    text at the start
    <code
      data-css-hvsxkc=""
    >
      buy-in programmatically, or out of the loop. I'll book a meeting so we can solution this before the sprint is over get buy-in, and closing these latest prospects is like putting socks on an octopus. Knowledge is power
    </code>
    text on the end
  </p>
</div>
`;

exports[`Storyshots Code maintains whitespace 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <code
    data-css-hvsxkc=""
  >
     in the middle 
  </code>
</div>
`;

exports[`Storyshots Code middle of paragraph 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-17nixd9=""
  >
    Please advise soonest streamline data-point, and execute , price point. This is not the hill i want to die on going forward. Diversify kpis not the long pole in my tent. Synergize productive mindfulness can you send me an invite? nor high-level so back of the net vertical integration. Deliverables 
    <code
      data-css-hvsxkc=""
    >
      inline code
    </code>
     granularity minimize backwards overflow. Baseline locked and loaded, and locked and loaded. Get buy-in programmatically, or out of the loop. I'll book a meeting so we can solution this before the sprint is over get buy-in, and closing these latest prospects is like putting socks on an octopus. Knowledge is power bake it in but take five, punch the tree, and come back in here with a clear head.
  </p>
</div>
`;

exports[`Storyshots Code standalone 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <code
    data-css-hvsxkc=""
  >
    inline code
  </code>
</div>
`;

exports[`Storyshots Heading className override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h2
    className="css-mbiza7"
    data-css-vetqvm=""
  >
    blue
  </h2>
</div>
`;

exports[`Storyshots Heading color: primary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-vetqvm=""
  >
    Primary
  </h1>
</div>
`;

exports[`Storyshots Heading color: secondary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-3hqi84=""
  >
    Secondary
  </h1>
</div>
`;

exports[`Storyshots Heading size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-vetqvm=""
  >
    large
  </h1>
</div>
`;

exports[`Storyshots Heading size: medium 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-1gbfzly=""
  >
    medium
  </h1>
</div>
`;

exports[`Storyshots Heading size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-1u6zvn6=""
  >
    small
  </h1>
</div>
`;

exports[`Storyshots Heading size: xLarge 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-ovsjkc=""
  >
    xLarge
  </h1>
</div>
`;

exports[`Storyshots Heading size: xSmall 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-1v8ehyy=""
  >
    xSmall
  </h1>
</div>
`;

exports[`Storyshots Heading size: xXSmall 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-cjuz5h=""
  >
    xXSmall
  </h1>
</div>
`;

exports[`Storyshots Heading size: xXXSmall 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h1
    data-css-jq9ssw=""
  >
    xXXSmall
  </h1>
</div>
`;

exports[`Storyshots Heading style override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <h2
    data-css-vetqvm=""
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    pink
  </h2>
</div>
`;

exports[`Storyshots Label caps & strong: true 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-1q07l0j=""
  >
    Caps
  </span>
</div>
`;

exports[`Storyshots Label caps: true 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-wz4xbe=""
  >
    Caps
  </span>
</div>
`;

exports[`Storyshots Label className override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    className="css-mbiza7"
    data-css-r8e5nl=""
  >
    blue
  </span>
</div>
`;

exports[`Storyshots Label color: primary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-r8e5nl=""
  >
    Primary
  </span>
</div>
`;

exports[`Storyshots Label color: secondary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-1bb129s=""
  >
    Secondary
  </span>
</div>
`;

exports[`Storyshots Label size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-1qk9cwn=""
  >
    large
  </span>
</div>
`;

exports[`Storyshots Label size: medium 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-r8e5nl=""
  >
    medium
  </span>
</div>
`;

exports[`Storyshots Label size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-1hz5jub=""
  >
    small
  </span>
</div>
`;

exports[`Storyshots Label size: xSmall 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-da57qr=""
  >
    xSmall
  </span>
</div>
`;

exports[`Storyshots Label strong: true 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-bsz03x=""
  >
    Strong
  </span>
</div>
`;

exports[`Storyshots Label style override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <span
    data-css-r8e5nl=""
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    pink
  </span>
</div>
`;

exports[`Storyshots List size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-f8xw9m=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List size: medium 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-ktsu2d=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-l6lfc1=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List type: bulleted 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-ktsu2d=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List type: default 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ul
    data-css-n0w93d=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ul>
</div>
`;

exports[`Storyshots List type: numbered 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <ol
    data-css-zj3w7f=""
  >
    <li>
      one
    </li>
    <li>
      two
    </li>
    <li>
      three
    </li>
    <li>
      four
    </li>
    <li>
      five
    </li>
  </ol>
</div>
`;

exports[`Storyshots P className override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    className="css-mbiza7"
    data-css-17nixd9=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P color: primary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-17nixd9=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P color: secondary 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-9llqti=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P em 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-9llqti=""
  >
    Cras faucibus ex id ligula aliquam, eget porta
    <em>
      this is em
    </em>
     tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum. Vestibulum id nisi a massa
     
    <em>
      THIS IS EM
    </em>
     tincidunt malesuada vitae non risus. cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P size: large 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-7vvqm6=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P size: medium 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-17nixd9=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P size: small 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-1s5i094=""
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;

exports[`Storyshots P style override 1`] = `
<div
  style={
    Object {
      "padding": "48px",
    }
  }
>
  <p
    data-css-17nixd9=""
    style={
      Object {
        "color": "#E7558B",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur aliquam pharetra arcu in commodo. Cras faucibus ex id ligula aliquam, eget porta tortor efficitur. Duis eget ultrices ligula. Pellentesque laoreet massa interdum, venenatis sem pretium, efficitur enim. Vestibulum id nisi a massa tincidunt malesuada vitae non risus. Sed eget convallis libero. Nam ac libero luctus, euismod lectus eget, cursus nibh.
  </p>
</div>
`;
